Update: cart drawer recommended section UI

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -46,12 +46,15 @@
     "icon_linecaps": "miter",
     "superscript_decimals": true,
     "product_save_type": "percent",
-    "quick_shop_enable": false,
-    "quick_add_enable": true,
+    "vendor_enable": false,
+    "quick_shop_enable": true,
+    "quick_add_enable": false,
     "product_grid_image_size": "portrait",
     "product_grid_image_fill": true,
     "product_hover_image": false,
-    "enable_swatches": false,
+    "enable_swatches": true,
+    "swatch_style": "square",
+    "swatch_size": 30,
     "product_grid_style": "simple",
     "product_grid_image_margin": 0,
     "collection_grid_shape": "portrait",
